base work of multilangual site

--- a/news_fr.html
+++ b/news_fr.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-permalink: /news/
-title: News
+permalink: /news-fr/
+title: Blog
 in_menu: Y
 sort: 2
-lang: en
+lang: fr
 ref: news
 ---
 
