--- a/quick_fr.html
+++ b/quick_fr.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-permalink: /quick/
+permalink: /quick-fr/
 title: Quick
 in_menu: Y
 sort: 3
-lang: en
+lang: fr
 ref: quick
 ---
 
