--- a/quick_fr.html
+++ b/quick_fr.html
@@ -8,6 +8,10 @@ lang: fr
 ref: quick
 ---
 
+Ne ratez aucune brève, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xml">flux RSS des brèves</a>!  
+<br/>
+<br/>
+
 <div class="posts"> 
 	{% assign posts=site.posts | where:"type", "quick" | where:"lang", page.lang %}
 	{% for post in posts %}
