rename Quick fr --> Brèves

--- a/quick_fr.html
+++ b/quick_fr.html
@@ -1,14 +1,14 @@
 ---
 layout: page
-permalink: /quick-fr/
-title: Quick
+permalink: /Breves/
+title: Brèves
 in_menu: Y
 sort: 3
 lang: fr
 ref: quick
 ---
 
-Ne ratez aucune brève, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xml">flux RSS des brèves</a>!  
+Ne ratez aucune brèves, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xml">flux RSS des brèves</a>!  
 <br/>
 <br/>
 
