move quick to own collectino

--- a/quick.html
+++ b/quick.html
@@ -12,7 +12,7 @@ Don't miss any quick info, follow our <a href="{{ site.baseurl }}/feed_quick.xm
 <br/>
 <br/>
 <div class="posts"> 
-	{% assign posts=site.posts | where:"type", "quick" | where:"lang", page.lang %}
+	{% assign posts=site.quick | where:"lang", page.lang %}
 	{% for post in posts %}
 		<div>
 			{{ post.date | date_to_string }} - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
