--- a/quick_fr.html
+++ b/quick_fr.html
@@ -13,7 +13,7 @@ Ne ratez aucune brèves, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xm
 <br/>
 
 <div class="posts"> 
-	{% assign posts=site.posts | where:"type", "quick" | where:"lang", page.lang %}
+	{% assign posts=site.quick | where:"lang", page.lang %}
 	{% for post in posts %}
 		<div>
 			{{ post.date | date_to_string }} - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
