--- a/quick_fr.html
+++ b/quick_fr.html
@@ -14,7 +14,7 @@ Ne ratez aucune brèves, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xm
 
 <div class="posts"> 
 	{% assign posts=site.quick | where:"lang", page.lang %}
-	{% for post in posts %}
+	{% for post in posts reversed %}
 		<div>
 			{{ post.date | date_to_string }} - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
 		</div>
