--- a/quick_fr.html
+++ b/quick_fr.html
@@ -16,7 +16,7 @@ Ne ratez aucune brèves, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xm
 	{% assign posts=site.quick | where:"lang", page.lang %}
 	{% for post in posts reversed %}
 		<div>
-			{{ post.date | date_to_string }} - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
+			{% include date.html date=post.date %} - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
 		</div>
    {% endfor %} 
 </div> 
