--- a/quick.html
+++ b/quick.html
@@ -15,7 +15,7 @@ Don't miss any quick info, follow our <a href="{{ site.baseurl }}/feed_quick.xm
 	{% assign posts=site.quick | where:"lang", page.lang %}
 	{% for post in posts reversed %}
 		<div>
-			{% include date.html date=post.date %} - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
+			<span style="min-width:112px;display: inline-block;">{% include date.html date=post.date %}</span> - <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
 		</div>
    {% endfor %} 
 </div> 
