correct alternate link to feeds

--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@ in_menu: true
 sort: 2
 lang: en
 ref: news
+alternate: feed.xml
 ---
 
 Don't miss any news, follow our <a href="{{ site.baseurl }}/feed.xml">feed</a>!
