--- a/news_fr.html
+++ b/news_fr.html
@@ -6,6 +6,7 @@ in_menu: true
 sort: 2
 lang: fr
 ref: news
+alternate: feed_fr.xml
 ---
 
 Ne ratez aucune info, abonnez-vous au <a href="{{ site.baseurl }}/feed_fr.xml">flux RSS</a>!
