--- a/quick.html
+++ b/quick.html
@@ -6,6 +6,7 @@ in_menu: true
 sort: 3
 lang: en
 ref: quick
+alternate: feed_quick.xml
 ---
 
 Don't miss any quick info, follow our <a href="{{ site.baseurl }}/feed_quick.xml">quick feed</a>!
