--- a/quick_fr.html
+++ b/quick_fr.html
@@ -6,6 +6,7 @@ in_menu: true
 sort: 3
 lang: fr
 ref: quick
+alternate: feed_quick_fr.xml
 ---
 
 Ne ratez aucune brèves, suivi le  <a href="{{ site.baseurl }}/feed_quick_fr.xml">flux RSS des brèves</a>!
